BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Call2_Discussion_vod__c.object
<CustomObject>
    <fields>
        <fullName>Patient_Type_BMS_CN__c</fullName>
        <description>Patient Type (Depends on Products)</description>
        <label>Patient Type</label>
        <picklist>
            <controllingField>zvod_Product_Map_vod__c</controllingField>
            <picklistValues>
                <fullName>Core Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense Generic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New T2DM patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTN with MI (NSTEMI/STEMI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTN with UA/A-PCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTN with CHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glucose uncontrol with mono Met dosage 1500mg above T2DM patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New diagnosed T2DM patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TKR patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELETE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early-stage Breast Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Ovarian Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pipeline_Other_BMS_CA__c</fullName>
        <label>Pipeline / Other</label>
        <picklist>
            <picklistValues>
                <fullName>11βHSD Inhibitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABILIFY® (aripiprazole)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-CD28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-CD40L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-CD70 ADC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-CXCR4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-IL31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-IL6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-IP10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-KIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-LAG3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-PD1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-PD-L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asunaprevir (NS3 Inhibitor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATRIPLA® (efavirenz/emtricitabine/tenofovir disoproxil fumarate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avagacestat (Gamma Secretase Inhibitor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVALIDE® (irbesartan hydrochlorothiazide)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVAPRO® (irbesartan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aβ Modulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARACLUDE® (entecavir)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BICNU® (carmustine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brivanib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSPAR® (buspirone hydrochloride)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR1 Antagonists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR2 / 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEENU® (lomustine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGRP Antagonist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COUMADIN® (warfarin sodium)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVMet General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daclatasvir (NS5A inhibitor)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Presentation__c</fullName>
        <description>Picklist containing the available presentations.</description>
        <label>Presentation</label>
        <picklist>
            <picklistValues>
                <fullName>RLS Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHS Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHS Diabetic Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR Presentation Diabetic Patients</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Knowledge_BMS_CN__c</fullName>
        <label>Product Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Significant Gaps of Product Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Unable to comm general Med attributes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Significant gaps in TA Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Variable knowledge of TA on diff topics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Some misunderstandings of Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Minor Gaps in BMS Product Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - High level of general TA Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Ability to accurately comm Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Detailed Product knowledge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Presentation_Proactive_Deck_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Presentation: Proactive Deck</label>
        <referenceTo>Product_Presentation_Proactive_Deck_BMS__c</referenceTo>
        <relationshipLabel>Interaction Discussions</relationshipLabel>
        <relationshipName>Interaction_Discussions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Strategy_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the product strategy used in this call discussion.</description>
        <label>Product Strategy</label>
        <referenceTo>Product_Strategy_vod__c</referenceTo>
        <relationshipName>Call_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Tactic_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product tactic used in this discussion.</description>
        <label>Product Tactic</label>
        <referenceTo>Product_Tactic_vod__c</referenceTo>
        <relationshipName>Call_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product in the product catalog. This product is the topic of the call discussion.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipName>Call_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Segment_BMS_EMEA__c</fullName>
        <description>VPRO - January 2014 - BMS EMEA CORE Requirements &amp; Design: Custom field to capture the proposed segment as part of the ENGAGE sequence.</description>
        <label>Proposed Segment</label>
        <picklist>
            <controllingField>zvod_Product_Map_vod__c</controllingField>
            <picklistValues>
                <fullName>BARACLUDE Proposed Segment A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Believers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cautious Experimenters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consider all PD1 the same</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged Traditionalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Line User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast, broad adoption of DAAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glivec First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growing Use in 1st bio switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holistic Sprycel users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late line user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower, conservative use of DAAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low or No IV Capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More cautious adoption of DAAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No interest/No use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefers BRAF/MEK Inhibitors 1st line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefers Keytruda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefers Opdivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefers Yervoy 1st line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simple Decisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasigna Belivers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconvienced Followers</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question_BMS__c</fullName>
        <label>Question</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restricted_Comments__c</fullName>
        <description>Text area to save restricted comments about the discussion.</description>
        <label>Restricted Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Slides__c</fullName>
        <description>Used to capture the slides presented during the discussion.</description>
        <label>Slides</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_BMS__c</fullName>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Training_Proactive_Deck_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker Training: Proactive Deck</label>
        <referenceTo>Speaker_Training_Proactive_Deck_BMS__c</referenceTo>
        <relationshipLabel>Interaction Discussions</relationshipLabel>
        <relationshipName>Interaction_Discussions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the user for which the call discussion was delivered.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call2_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Webcast_ID_BMS__c</fullName>
        <label>Webcast ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Y_BMS__c</fullName>
        <formula>&quot;Y&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iPlan_Deck_Name_BMS__c</fullName>
        <formula>Speaker_Training_Proactive_Deck_BMS__r.iPlan_Deck_Name_BMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>iPlan Deck Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iPlan_Product_ID_BMS__c</fullName>
        <formula>Speaker_Training_Proactive_Deck_BMS__r.iPlan_Product_ID_BMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>iPlan Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iPlan_Product_Name_BMS__c</fullName>
        <formula>Speaker_Training_Proactive_Deck_BMS__r.iPlan_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>iPlan Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iPlan_Status_BMS__c</fullName>
        <label>iPlan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Slide Deck ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid CMEH ID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zvod_Product_Map_vod__c</fullName>
        <description>Special field to create dependency relationships on call discussion fields based on product.  The picklist values for this field are the textual names of detailed products.  The values must be an exact match.  This field should not be placed on any of the call discussion layouts.</description>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>DELETE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMS-986001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARACLUDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRIVANIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDUREON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYETTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELIQUIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOMBOGLYZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONGLYZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORENCIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRYCEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YERVOY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APIXABAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAPAGLIFLOZIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAXAGLITPTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXENATIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DASATINIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPILIMUMAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELOTUZUMAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIVOLUMAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABATACEPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELATACEPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATAZANAVIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFAVIRENZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTECAVIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV attachment inhibitor BMS-663068</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV NRTI BMS-986001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCV Portfolio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REYATAZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATRIAL FIBRILLATION (APIXABAN)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Interaction Discussion</label>
    <nameField>
        <displayFormat>IDI{000000000}</displayFormat>
        <label>Interaction Discussion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Discussions</pluralLabel>
    <recordTypes>
        <fullName>BMS_CAN_KAM_Interaction</fullName>
        <active>true</active>
        <description>Used by Canada KAM users</description>
        <label>BMS - CAN - KAM Interaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_CAN_MSL_Interaction_BMS_CANADA</fullName>
        <active>true</active>
        <label>BMS - CAN - MSL Interaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_CAN_Sales_Rep_Interaction</fullName>
        <active>true</active>
        <label>BMS - CAN - Sales Rep Interaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_CHINA_MSL_Interaction</fullName>
        <active>true</active>
        <label>BMS - CHINA MSL Interaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_CHINA_SALES_Interaction</fullName>
        <active>true</active>
        <label>BMS - CHINA SALES Interaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_CHINA_Sales_Interaction_Group_Call</fullName>
        <active>true</active>
        <label>BMS - CHINA Sales Interaction (1Group Call)</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_CHINA_Sales_Interaction_Others</fullName>
        <active>true</active>
        <label>BMS - CHINA Sales Interaction (Others)</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_CHINA_Sales_Interaction_Reminder_Call</fullName>
        <active>true</active>
        <label>BMS - CHINA Sales Interaction (2Reminder Call)</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_CHINA_Sales_Interaction_Social_Call</fullName>
        <active>true</active>
        <label>BMS - CHINA Sales Interaction (3Social Call)</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_EPM_Interaction</fullName>
        <active>true</active>
        <description>VPRO EMEA Mar-2015: Record Type created to accommodate the needs of EPMs</description>
        <label>BMS - EMEA - EPM Interaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_HQ_Interaction</fullName>
        <active>true</active>
        <description>Record type for EMEA HQ interactions</description>
        <label>BMS - EMEA - HQ Interaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_MSL_Interaction</fullName>
        <active>true</active>
        <description>EMEA - Medical Interaction Discussion</description>
        <label>BMS - EMEA MSL Interaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_Sales_Rep_Interaction</fullName>
        <active>true</active>
        <label>BMS - EMEA Sales Rep Interaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_MEA_MSL_Interaction</fullName>
        <active>true</active>
        <description>MSL interactions for MEA</description>
        <label>BMS - MEA MSL Interaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_MEA_Sales_Rep_Interaction</fullName>
        <active>true</active>
        <label>BMS - MEA Sales Rep Interaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_MSL_Interaction</fullName>
        <active>true</active>
        <label>BMS - MSL Interaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Non_Branded_Interaction</fullName>
        <active>true</active>
        <label>BMS - Non-Branded Interaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>CallReport_vod</fullName>
        <active>true</active>
        <label>Call Report_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_vod</fullName>
        <active>true</active>
        <description>Record Type for Call Discussion Event Layouts</description>
        <label>Event_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>MSLMeetingBrief_vod</fullName>
        <active>true</active>
        <label>MSL Meeting Brief_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>MeetingBrief_vod</fullName>
        <active>true</active>
        <description>Meeting Brief</description>
        <label>Meeting Brief_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BMS_EMEA_CTrequiredForMSMScenarios</fullName>
        <active>true</active>
        <description>VPRO EMEA Nov 2014: a Clinical Trial (CT) can only be selected in specific MSM scenarios.</description>
        <errorConditionFormula>OR( 
AND(ISPICKVAL(Interaction_Topic_BMS__c, &apos;4- Clinical Trial&apos;),TEXT(Clinical_Trial_BMS_EMEA__c)=&apos;&apos;), 
AND(NOT(ISPICKVAL(Interaction_Topic_BMS__c, &apos;4- Clinical Trial&apos;)),TEXT(Clinical_Trial_BMS_EMEA__c)&lt;&gt;&apos;&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Clinical_Trial_BMS_EMEA__c</errorDisplayField>
        <errorMessage>A Clinical Trial must be selected when Topic is CT and must be left empty otherwise.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMS_EMEA_EA_Account_Match_On_Interaction</fullName>
        <active>true</active>
        <description>BMS ACN - October 2015 (Q3 GRM) : When EA is selected, Check to ensure for a Parent call, Customer selected on Engagement Activity matches with Customer selected on Interaction.</description>
        <errorConditionFormula>AND( 
Call2_vod__r.RecordType.DeveloperName=&apos;BMS_EMEA_MSL_Interaction&apos;, 
Call2_vod__r.Is_Parent_Call_vod__c = 1, 
NOT(ISBLANK(Engagement_Activities_BMS_EMEA__c)), 
NOT(Engagement_Activities_BMS_EMEA__r.Account_vod__r.SFID18_BMS__c == Call2_vod__r.Account_vod__r.SFID18_BMS__c))</errorConditionFormula>
        <errorMessage>Engagement Activity : Account should be the same the Interaction: Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMS_EMEA_MCTrequiredForMSMScenarios</fullName>
        <active>true</active>
        <description>VPRO EMEA Nov 2014: a Medical Communication Topic (MCT) can only be selected in specific MSM scenarios.</description>
        <errorConditionFormula>OR( 
AND(ISPICKVAL(Interaction_Topic_BMS__c, &apos;3- Medical Communication Topic&apos;),TEXT(Medical_Communication_Topic_BMS_EMEA__c)=&apos;&apos;), 
AND(NOT(ISPICKVAL(Interaction_Topic_BMS__c, &apos;3- Medical Communication Topic&apos;)),TEXT(Medical_Communication_Topic_BMS_EMEA__c)&lt;&gt;&apos;&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Med_Plan_Communication_Topic_BMS__c</errorDisplayField>
        <errorMessage>A Medical Communication Topic must be selected when Topic is MCT and must be left empty otherwise.</errorMessage>
    </validationRules>
</CustomObject>